--- a/index.html
+++ b/index.html
@@ -3,56 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Welcome to zs-org's GitHub Pages!">
-    <title>zs-org | GitHub Pages</title>
+    <title>ZS</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            background: linear-gradient(120deg, #4c8bf5, #6a11cb);
-            color: #fff;
+            background-color: #f4f4f4;
             text-align: center;
         }
-        header {
-            margin-bottom: 20px;
+        .container {
+            max-width: 600px;
+            margin: 100px auto;
+            padding: 20px;
+            background: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
         }
         h1 {
-            font-size: 2.5em;
+            color: #333;
         }
         p {
-            font-size: 1.2em;
+            color: #666;
         }
-        a {
-            color: #ffcc00;
+        .email {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 10px 15px;
+            background: #007BFF;
+            color: white;
             text-decoration: none;
-            font-weight: bold;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        footer {
-            position: absolute;
-            bottom: 20px;
-            font-size: 0.9em;
+            border-radius: 5px;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Welcome to zs-org's GitHub Pages!</h1>
-        <p>Explore my projects, contributions, and more.</p>
-    </header>
-    <main>
-        <p>Visit my <a href="https://github.com/zs-org" target="_blank">GitHub profile</a> for more details.</p>
-    </main>
-    <footer>
-        <p>&copy; 2024 zs-org. All rights reserved .</p>
-    </footer>
+    <div class="container">
+        <h1>ZS</h1>
+        <p>A Web based Organization for every work</p>
+        <a href="mailto:zs@zsorg.us.kg" class="email">Contact Us</a>
+    </div>
 </body>
 </html>
