--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <div class="container">
         <h1>ZS</h1>
         <p>A Web based Organization for every work</p>
+        <p>Mail : zs@zsorg.us.kg</p>
         <a href="mailto:zs@zsorg.us.kg" class="email">Contact Us</a>
     </div>
 </body>
