--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZS</title>
+
+    <!-- Favicon (Make sure icon.png is in your GitHub repo root) -->
+    <link rel="icon" href="icon.png" type="image/png">
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -36,6 +40,50 @@
             border-radius: 5px;
         }
     </style>
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "WebSite",
+          "name": "ZS",
+          "alternateName": "zsorg",
+          "url": "https://zsorg.us.kg"
+        },
+        {
+          "@type": "Organization",
+          "name": "ZS",
+          "alternateName": "zsorg",
+          "url": "https://zsorg.us.kg",
+          "logo": "https://raw.githubusercontent.com/zs-org/zs-org/main/icon.png",
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "email": "zs@zsorg.us.kg",
+            "contactType": "customer service"
+          }
+        },
+        {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://zsorg.us.kg/"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "GitHub",
+              "item": "https://github.com/zs-org"
+            }
+          ]
+        }
+      ]
+    }
+    </script>
 </head>
 <body>
     <div class="container">
