--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZS</title>
 
-    <!-- Favicon (Make sure icon.png is in your GitHub repo root) -->
-    <link rel="icon" href="icon.png" type="image/png">
+    <!-- Favicon (Using Your GitHub Icon) -->
+    <link rel="icon" href="https://raw.githubusercontent.com/zs-org/zs-org.github.io/0eaab590010429b518f2822180d6e48a3f5e90bb/icon.png" type="image/png">
 
     <style>
         body {
@@ -57,7 +57,7 @@
           "name": "ZS",
           "alternateName": "zsorg",
           "url": "https://zsorg.us.kg",
-          "logo": "https://raw.githubusercontent.com/zs-org/zs-org/main/icon.png",
+          "logo": "https://raw.githubusercontent.com/zs-org/zs-org.github.io/0eaab590010429b518f2822180d6e48a3f5e90bb/icon.png",
           "contactPoint": {
             "@type": "ContactPoint",
             "email": "zs@zsorg.us.kg",
