--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZS - A Developer Hub</title>
+    <title>ZS</title>
 
-    <!-- Favicon -->
-    <link rel="icon" href="https://raw.githubusercontent.com/zs-org/zs-org.github.io/0eaab590010429b518f2822180d6e48a3f5e90bb/icon.png" type="image/png">
+    <!-- Favicon (Updated) -->
+    <link rel="icon" href="https://raw.githubusercontent.com/zs-org/zs-org.github.io/refs/heads/main/favicon.ico" type="image/x-icon">
 
     <style>
         body {
@@ -75,7 +75,7 @@
           "name": "ZS",
           "alternateName": "zsorg",
           "url": "https://zsorg.us.kg",
-          "logo": "https://raw.githubusercontent.com/zs-org/zs-org.github.io/0eaab590010429b518f2822180d6e48a3f5e90bb/icon.png",
+          "logo": "https://raw.githubusercontent.com/zs-org/zs-org.github.io/refs/heads/main/favicon.ico",
           "contactPoint": {
             "@type": "ContactPoint",
             "email": "zs@zsorg.us.kg",
@@ -122,6 +122,9 @@
             </a>
             <a href="https://codeberg.org/zsorg" target="_blank">
                 <img src="https://www.svgrepo.com/show/330179/codeberg.svg" alt="Codeberg" class="social-icon">
+            </a>
+            <a href="https://github.com/orgs/zs-org/discussions" target="_blank">
+                <img src="https://cdn-icons-png.flaticon.com/512/281/281769.png" alt="Discussions" class="social-icon">
             </a>
         </div>
 
