--- a/index.html
+++ b/index.html
@@ -146,6 +146,18 @@
                 <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="Discussions" class="social-icon">
                 <span>Discussions</span>
             </a>
+            <a href="https://www.youtube.com/@zsorganization" target="_blank" class="social-link">
+                <img src="https://cdn-icons-png.flaticon.com/128/174/174883.png" alt="Youtube" class="social-icon">
+                <span>Youtube</span>
+            </a>
+            <a href="https://t.me/zsorg" target="_blank" class="social-link">
+                <img src="https://cdn-icons-png.flaticon.com/128/2111/2111646.png" alt="Telegram" class="social-icon">
+                <span>Telegram</span>
+            </a>
+            <a href="https://www.linkedin.com/groups/10051292/" target="_blank" class="social-link">
+                <img src="https://cdn-icons-png.flaticon.com/128/3536/3536505.png" alt="LinkedIn" class="social-icon">
+                <span>LinkedIn</span>
+            </a>
         </div>
 
         <p>Mail: zs@zsorg.us.kg</p>
