--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZS</title>
+    <meta name="description" content="ZS, also known as zsorg, A web-based Organization gathering Developers in one place.">
 
     <!-- Favicon -->
     <link rel="icon" href="https://raw.githubusercontent.com/zs-org/zs-org.github.io/refs/heads/main/favicon.ico" type="image/x-icon">
