--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
           "url": "https://zsorg.us.kg"
         },
         {
+          "@type": "WebSite",
+          "name": "ZS",
+          "alternateName": "zsorg",
+          "url": "https://zs-org,github.io"
+        },
+        {
           "@type": "Organization",
           "name": "ZS",
           "alternateName": "zsorg",
