--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       "@type" : "WebSite",
       "name" : "ZS",
       "alternateName": ["zs", "zsorg"],
-      "url" : "https://zsorg.us.kg/"
+      "url" : "https://zsorg.us.kg/",
       "@graph": [
         {
           "@type": "WebSite",
